docs/3.0.x/input.md
---
id: input
title: Input
metaTitle: Input | NativeBase
metaDescription: The Input component in NativeBase allows a user to provide input in a text field. Read on for input sizes, input variants, input addons and more, with examples.
---

import { ComponentTheme } from '../../src/components';

The `Input` component is a component that is used to get user input in a text field.

## Examples

### Basic

```ComponentSnackPlayer path=primitives,Input,Basic.tsx

```

### Input Sizes

```ComponentSnackPlayer path=primitives,Input,Size.tsx

```

### Input Variants

```ComponentSnackPlayer path=primitives,Input,Variant.tsx

```

<!-- ### Input Addons

```ComponentSnackPlayer path=primitives,Input,Addons.tsx

``` -->

### Input Elements

```ComponentSnackPlayer path=primitives,Input,Elements.tsx

```

### Password Input

```ComponentSnackPlayer path=primitives,Input,Masked.tsx

```

### Controlled Input

```ComponentSnackPlayer path=primitives,Input,Controlled.tsx

```

### Form Controlled

```ComponentSnackPlayer path=primitives,Input,FormControlled.tsx

```

## Props

### Input

```ComponentPropTable path=primitives,Input,Input.tsx showStylingProps=true

```

### Input.Group

```ComponentPropTable path=primitives,Input,InputGroup.tsx

```

## Styling

<ComponentTheme name="input" />
